# onnxgurobi

./: .gitignore  .pypirc  LICENSE.txt  README.md  conv1.onnx  conv2.onnx  elaborate_conv.onnx  fc1.onnx  genindex.html  index.html  mnist_classifier.onnx  modules.html  neural_network.onnx  nn_flatten_gemm_matmul.onnx  objects.inv  onnxgurobi.html  onnxgurobi.onnx_to_gurobi.html  onnxgurobi.onnx_to_gurobi.parsers.html  pyproject.toml  requirements.txt  searchindex.js  setup.py  simple_add.onnx  simple_cn.onnx  simple_conv.onnx  simple_dd.onnx  simple_ff.onnx
_modules/: index.html
_sources/: index.rst.txt  onnxgurobi.rst.txt
docs/: conf.py  modules.rst
examples/: example1.py  example2.py
onnx-to-gurobi/: model_builder.py  parser.py  utils.py
onnx_to_gurobi/: model_builder.py  onnxToGurobi.py  parser.py  utils.py
onnx_to_gurobi.egg-info/: PKG-INFO  SOURCES.txt
onnxgurobi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: add.py  add_parser.py  averagepool.py  averagepool_parser.py  base_operator.py  batch_normalization.py  batch_normalization_parser.py  comparing_onnx_and_gurobi.py  comparing_onnx_and_gurobi_conv.py  concat.py  concat_parser.py  constant_parser.py  conv.py  conv_parser.py  dropout.py  dropout_parser.py  flatten.py  flatten_parser.py  gemm.py  gemm_parser.py  identity.py  identity_parser.py  internalOnnx.py  matmul.py  matmul_parser.py  maxpool.py  maxpool_parser.py  model_builder.py  neural_network.py  neural_network_only_gemm.onnx  only_gurobi.py  onnxToGurobi.py  operator_factory.py  parser.py  parser_factory.py  relu.py  reshape.py  (+9 more)
(+115 files in other folders)
